# priyambodo.com-iamtelco

./: .gitignore  README.md  published-github.txt  published-website.txt
iamtelco.priyambodo.com-v1.0/: 0_🥷_IamTelco_AI_Advisor_v1.py  Dockerfile  Dockerfile-using_poetry  Dockerfile-using_requirementstxt  Enterprise Database Migration.md  README.md  call_gemini.py  call_langchain.py  config.yml  pyproject.toml  requirements.txt  sh00-poetryshell.sh  sh01-poetry-initialization.sh  sh02-streamlit.sh  sh03-cloudrun.sh  sh04-dockerbuild-and-dockerrun.sh  version.txt
iamtelco.priyambodo.com-v1.0/attachments/: chatsample.txt  telcochat1.txt
iamtelco.priyambodo.com-v1.0/myfunctions/: f_calldocumentai_summary.py  f_callgemini_vertexai.py  f_callimagen_vertexai.py  f_calllangchain_vertexsearch.py  f_callutility_functions.py
iamtelco.priyambodo.com-v1.0/pages/: 1_💬_Chat_Support_Analysis_for_Telco.py  2_🎭_Document_Analysis_for_Telco.py  3_📇_Image_Analysis_for_Telco.py  98_🎯_Check_"I-Am"_other_applications.py  98_🗣️_Give_your_Feedback_or_Comments.py  99_🙎‍♂️_About_this_Application.py
iamtelco.priyambodo.com-v1.0/pages/archives/: 8_UploadFile.py
iamtelco.priyambodo.com-v1.0/static/: IamRich-Diagram.excalidraw
iamtelco.priyambodo.com-v1.0/utils/: bq_utils.py  config.py  convert_df.py  llm.py  prompt_template.py  sql.py
iamtelco.priyambodo.com-v1.0/vertexsearch/: Dockerfile  index.html  sh01-buildcloudrun.sh
iamtelco.priyambodo.com-v1.0/vertexsearch/docker-script/: sh-6dockerbuild.sh  sh-7dockerrun.sh  sh-8deploycloudrun.sh  sh-9cloudbuild.sh  sh-killall.sh
(+9 files in other folders)
